--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample</title>
-    <link rel="icon" href="/images/Logo_900px.png" type="image/png">
+    <link rel="icon" href="/images/Apple_shreds.jpg" type="image/png">
     
     <link rel="stylesheet" href="main.css">
 
