--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home-page</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#privacy-policy" class="nav-link">Privacy Policy</a></li>
-          <li class="nav-item"><a href="#Extras" class="nav-link">Extras</a></li>
+          <li class="nav-item"><a href="#samples" class="nav-link">Samples</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -47,11 +47,19 @@
       <p id="msg"></p>
     </section>
     <section class="section-2">
-        <h2></h2>
-        <p><strong>To use any of the sample websites codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there.</strong></p>
-        <p><strong>Things or tags around the text matters. If you wish to change texts or written words, just delete texts or written words. If you wish to remove a paragraph, just delete all the texts between the 'p' tag in front to the 'p' tag at the end. If you wish to remove a format like 'strong', delete the opening tag 'strong' at the beginning of a paragraph or sentence, and also delete the closing tag 'strong' at the end of the paragraph or sentence. Every tag has an open part and a closing part. You really need to be conscious of that.</strong></p>
-        <p><b>If all these are complex for you, don't woryy. Google.com and some other sites offer free websites. Check out <a href="https://sites.google.com">Free Google Sites.</a> Just sign in or sign up to Google, select from the templates and simply click to edit.</b></p>
-    </section>
+  
+        <p><b>The aim of this site is to display my personally created website templates or formats, and make the codes available on github for anyone to copy. Click <a href="https://github.com/rebflora/public.git">Here</a> to go to my github account. Click 'Samples' in the navbar above to view sample websites. To return to 'Home-page', try to remember dev.rebekahflora.com or use your browser back button.</b></p>
+        <p><strong>These websites are not for professional usage. They are for simple interest like: Creating a simple landing page for a parked domain name or yet to be used domain name, or a basis for understanding HTML syntax, upon which you can build a better website.</strong></p>
+        <p><b>To use any of the sample website or structure, just copy the codes in the html file, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder (i.e. everything on the <a href="https://github.com/rebflora/public.git">github folder</a>) and delete the Sample folder from it. That is because the format/structure for the Home-page has it's style file separated from the index.html. So, you will copy: 404.html, about.html, app.js, index.html and main.css. Copy them into a folder; they have to be in the same folder. If the structure you need is 'sample2.html', click the sample folder in <a href="https://github.com/rebflora/public.git">my github folder/repository</a>. When it opens, you will see other samples, select the one you need, click it and it will display the code. Copy the code. You can place it on any code editor and add or remove whatever.</b></p>
+        <p><strong>To use any of the sample website codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there.</strong></p>
+        <p><strong>Things or tags around the text matters. If you wish to change texts or written words, just delete texts or written words. If you wish to remove a paragraph, just delete all the texts between the 'p' tag in front to the 'p' tag at the end. If you wish to remove a format like 'strong' or 'b' which makes text bold, delete the opening tag 'strong' at the beginning of a paragraph or sentence, and also delete the closing tag '/strong' at the end of the paragraph or sentence. Every tag has an open part and a closing part. You really need to be conscious of that.</strong></p>
+        <p><strong>To change colors, search around the upper part of the codes/script for where you will find #numbers_and_alphabets, e.g. #7f6b00. Go to 'google.com' and search for color hex for any color you desire. Copy the hex and replace the one in the code.</strong></p>
+        <p><b>If all these are complex for you, don't worry. Google.com and some other sites offer free websites, that don't require you to know codes before you can edit. Check out <a href="https://sites.google.com">Free Google Sites.</a> Just sign in or sign up to Google, select from the templates and simply click to edit.</b></p>
+        <p><strong>If you know how to use vsc (virtual studio code), then you can pull the codes, save them locally, edit or play around with them. To view your work, ensure you have 'open in browser' extension installed from your vsc extensions marketplace. With that installed, you can click on any of your .html file, select 'open in default browser' and it will display your work.</strong></p>
+        <p><strong>At the time of writing these - September 6th, 2021, I'm not a professional website designer. So all my samples were built from basic knowledge I've gathered over time. In months or years to come, I should be better, but that won't change the aim of this project: To make simply websites codes available. In other words, it will always be simple websites and not advanced or professional websites.</strong></p>
+        
+        <p style="font-size: 20px; font-weight: bold;">Cheers</p>
+      </section>
   
   </main>
     
