--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home-page</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#privacy-policy" class="nav-link">Privacy Policy</a></li>
-          <li class="nav-item"><a href="#Extras" class="nav-link">Extras</a></li>
+          <li class="nav-item"><a href="#samples" class="nav-link">Samples</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -48,7 +48,7 @@
     </section>
     <section class="section-2">
       <h2>Uhhh</h2>
-      <p><strong>To use any of the sample websites codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there.</strong></p>
+      <p><strong>To use any of the sample websites codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there. Click 'About' in the navbar above for more information.</strong></p>
      
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.</p>
     </section>
