--- a/sample/sample2.html
+++ b/sample/sample2.html
@@ -86,7 +86,7 @@ section {
 <article>
 <h3>Articles</h3>
 
-<p> This is another sample of simple website, it's not actually a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com</a> It has it's style file, i.e. .css inside the the html. So, no need for .css unless you wish to split it yourself.
+<p> This is another sample of simple website, it's not actually a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com.</a> It has it's style file, i.e. .css inside the the html. So, no need for .css unless you wish to split it yourself.
 </p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
@@ -98,7 +98,7 @@ section {
 
 <p>To use any of the sample website or structure, just copy the html, e.g. sample1.html To use the main page, i.e. Home-page, copy the Public folder and delete the Sample folder from it.</p>
 
-<p>Click <a href="https://dev.rebekahflora.com/about">HERE</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+<p>Click <a href="https://dev.rebekahflora.com/about.html">HERE</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
 </p>
 
 </section>
