--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home-page</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#privacy-policy" class="nav-link">Privacy Policy</a></li>
-          <li class="nav-item"><a href="#samples" class="nav-link">Samples</a></li>
+          <li class="nav-item"><a href="samples/index.html" class="nav-link">Samples</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
