--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       </header>
       
       <main>
-     <section class="section-1"><h2>Title</h2>
+     <section class="section-1"><h2>About</h2>
       <p id="msg"></p>
     </section>
     <section class="section-2">
