--- a/samples/index.html
+++ b/samples/index.html
@@ -49,11 +49,11 @@
     <section class="section-2">
   
         <h3>Click any below to view</h3>
-        <p style="font-size: 20px; font-weight: bold;"><a href="sample1.html">Sample1</a></p>
+        <p style="font-size: 20px; font-weight: bold;"><a href="sample1.html">Sample1</a>&nbsp&nbsp&nbsp<a href="https://github.com/rebflora/public/blob/main/samples/sample1.html">Code</a></p>
 
-<p style="font-size: 20px; font-weight: bold;"><a href="sample2.html">Sample2</a></p>
+<p style="font-size: 20px; font-weight: bold;"><a href="sample2.html">Sample2</a>&nbsp&nbsp&nbsp<a href="https://github.com/rebflora/public/blob/main/samples/sample2.html">Code</a></p>
       
-<p style="font-size: 20px; font-weight: bold;"><a href="sample3.html">Sample3</a></p>
+<p style="font-size: 20px; font-weight: bold;"><a href="sample3.html">Sample3</a>&nbsp&nbsp&nbsp<a href="https://github.com/rebflora/public/blob/main/samples/sample3.html">Code</a></p>
       
       </section>
   
