--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <p id="msg"></p>
     </section>
     <section class="section-2">
-      <h2>Uhhh</h2>
-      <p><strong>To use any of the sample websites codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there. Click 'About' in the navbar above for more information.</strong></p>
+      <h2>Freebie</h2>
+      <p><strong>Click 'Samples' in the navbar above for free simple websites; or free landing page. Click 'About' in the navbar above for more information. To use any of the sample websites codes -- including this main site too, you need to look at what you are copying. Look at it closely. It has many aspects. But you need to look at where written texts are; so you edit the texts to what you wish to be there.</strong></p>
      
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.</p>
+      <p>This is another paragraph. You might need another paragraph, or you might not; in which case you would need to delete this paragraph. Click 'About' in the navbar above for more information.</p>
     </section>
     <article>
       <h1>Continuum, Continuum, Continuum</h1>
@@ -60,7 +60,7 @@
       <li class="list-2">Existing</li>
       <li class="list">Observing</li>
     </ul> 
-    <p>Lorem ipsum dolor sit amet...</p>
+    <p>This is another paragraph below a list which has a subheading called "Process"; and a main heading called "Continuum". Below this paragraph is a minor heading called "Continuum". Irrelevant minor heading I bet.</p>
     <h3>Continuum, Continuum, Continuum</h3>
   </article>
   <section class="section-2">
