--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -373,7 +373,7 @@ function switchTheme(e) {
   }
 }
 
-const currentTheme = localStorage.getItem("theme");
+const currentTheme = localStorage.getItem("theme") || "light-theme";
 
 if (currentTheme) {
   
