--- a/samples/sample2.html
+++ b/samples/sample2.html
@@ -51,15 +51,15 @@ section {
 <main>
 
 <article>
-<h2><span style="color:#460000;"><span style="background-color:#757575; display: inline-block; padding:3px">This must be a quack or poor website format. <br> So, if you can create a better one, then you don't need this.</br></span></span></h2>
+<h2><span style="color:#460000;"><span style="background-color:#757575; display: inline-block; padding:3px">This must be a quack website design. Well,...</span></span></h2>
 </article>
 
 <section>
-<h2><span style="background-color:#360000; display: inline-block; padding:2px">But if you are a newbie, looking for a freebie, then feel free to use the code.</span></h2>
+<h2><span style="background-color:#360000; display: inline-block; padding:2px">...if you are a newbie, looking for a freebie, then feel free to use the code.</span></h2>
 
 <h3><span style="color:#000000;"><span style="background-color:#757575; padding:2px">&nbsp;or&nbsp;</span></span></h3>
 
-<h2><span style="background-color:#360000; display: inline-block; padding:2px">If you just need an index.html content for a domain. </span>
+<h2><span style="background-color:#360000; display: inline-block; padding:2px">If you just need a landing page. </span>
 </section>
 </main>
 </div>
