--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -78,27 +78,26 @@ section {
 <div class="container">
 
 <header>
-<h2>Support</h2>
+<h2>Sample 3</h2>
 </header>
 
 <main>
 
 <article>
-<h3>Articles</h3>
+<h3>Article</h3>
 
-<p> This is another sample of simple website, it's not actually a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com.</a> It has it's style file, i.e. .css inside the the html. So, no need for .css unless you wish to split it yourself.
+<p> This is another sample of a simple website, it's not a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com;</a> just another sample. It has it's style file, i.e. .css inside the the html. You can split the style from the html if you so desire.
 </p>
+<p></p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
-</p>
 </article>
 
 <section>
-<h3>Login</h3>
+<h3>Section</h3>
 
-<p>To use any of the sample website or structure, just copy the html, e.g. sample1.html To use the main page, i.e. Home-page, copy the Public folder and delete the Sample folder from it.</p>
+<p>To use any of the sample website or structure, just copy the html, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder and delete the 'Read.me' from it.</p>
 
-<p>Click <a href="https://dev.rebekahflora.com/about.html">HERE</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+<p>Click <a href="https://github.com/rebflora/public/blob/main/samples/sample3.html">Code</a> for this website code. Click <a href="https://dev.rebekahflora.com/samples/index.html">Here</a> to return to the Samples webpage.
 </p>
 
 </section>
