--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -86,7 +86,7 @@ section {
 <article>
 <h3>Article</h3>
 
-<p> This is another sample of a simple website, it's not a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com;</a> just another sample. It has it's style file, i.e. .css inside the the html. You can split the style from the html if you so desire.
+<p> This is another sample of a simple website, it's not a continuation of <a href="https://dev.rebekahflora.com">dev.rebekahflora.com;</a> just another sample. It has it's style tag, i.e. css inside the the html. You can split the style from the html if you so desire.
 </p>
 <p></p>
 
@@ -95,7 +95,7 @@ section {
 <section>
 <h3>Section</h3>
 
-<p>To use any of the sample website or structure, just copy the html, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder and delete the 'Read.me' from it.</p>
+<p>To use any of the sample website or structure, just copy the html, e.g. sample1.html. To use the main page, i.e. Home-page, copy the Public folder and delete the 'ReadMe.md' from it.</p>
 
 <p>Click <a href="https://github.com/rebflora/public/blob/main/samples/sample3.html">Code</a> for this website code. Click <a href="https://dev.rebekahflora.com/samples/index.html">Here</a> to return to the Samples webpage.
 </p>
