--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -130,8 +130,8 @@ li {
 
 @media only screen and (max-width: 768px) {
   .nav-menu {
-      position: absolute;
-      right: -150%;
+      position: fixed;
+      right: -100%;
       top: 120px;
       padding: 0 0;
       flex-direction: column;
