--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -319,7 +319,7 @@ input:checked + .slider:before {
           <li class="nav-item"><a href="#" class="nav-link">Nowhere</a></li>
           <li class="nav-item"><a href="https://www.rebekahflora.com" class="nav-link">Somewhere</a></li>
           <li class="nav-item"><a href="https://github.com/rebflora/public/blob/main/samples/sample4.html" class="nav-link">Grab Code</a></li>
-          <li class="nav-item"><a href="https://dev.rebekahflora.com" class="nav-link">Main Page</a></li>
+          <li class="nav-item"><a href="https://dev.rebekahflora.com" class="nav-link">Home-page</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -345,8 +345,8 @@ input:checked + .slider:before {
       <p id="msg"></p>
     </section>
     <section class="section-2">
-      <p><b>This website has its style and script within the html. And its navbar content are external links because there is no folder content to refer to; no extra pages were created. If what you want is to be able to link pages within a website, then this website's code is not what you need. You need the code of the home page.</b></p>
-      <p>The dark/light mode switcher style is different from the <a href="https://dev.rebekahflora.com">home page</a>. If you want the <a href="https://dev.rebekahflora.com">home page</a>, but with this dark/light mode switcher...now you want more, which entails you edit it, or pay a professional web developer/designer.</p>
+      <p><b>This website has its style and script within the html. And its navbar content are external links because there is no folder content to refer to; no extra pages were created. If what you want is to be able to link pages within a website, then this website's code is not what you need. You need the code of the home-page.</b></p>
+      <p>The dark/light mode switcher style is different from the <a href="https://dev.rebekahflora.com">home-page</a>. If you want the <a href="https://dev.rebekahflora.com">home-page</a>, but with this dark/light mode switcher...now you want more, which entails you edit it, or pay a professional web developer/designer.</p>
          <br>
         <p style="font-size: 20px; font-weight: bold;">Cheers</p>
       </br>
