--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -9,7 +9,7 @@
     <style>
 :root {
     --green: #65cc00;
-    --gold: #e5c100;
+    --gold: #ffd700;
     --black: #000000;
     --gray: #696969;
     --purple: #7f007f;
