--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <nav class="navbar nav-background">
         <div class="site-logo">
           <img src="./images/Logo_69x69.png" alt="logo">
-          <span style= "font-size: x-large;"><b>Sample</b></span>
+          <span class= "site-name"><b>Sample</b></span>
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="index.html" class="nav-link">Home-page</a></li>
