--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <div class="container">
     
     <header>
-      <nav class="navbar nav-background">
+      <nav class="navbar">
         <div class="site-logo">
+          <a href="https://dev.rebekahflora.com" style="text-decoration: none;">
           <img src="./images/Logo_69x69.png" alt="logo">
+        </a>
           <span style= "font-size: x-large;"><b>Sample</b></span>
         </div>  
         <ul class="nav-menu">
