--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -19,11 +19,12 @@
 
   * {
     font-family: helvetica;
+    box-sizing: border-box;
   }
   body { 
      color: var(--fontColor);
      background: var(--bg);
-     margin: 20px;
+     margin: 0;
   }
   body a {
     font-size: 18px;
@@ -58,11 +59,12 @@ li {
 
   header {
     margin: 0;
-    padding: 15px; 
+    padding: 2px; 
     height: 14rem;
     border: 1px solid transparent;
     text-align: center;
     background-color: #7f6c002f;
+    overflow: hidden;
   } 
 
   .logo {
@@ -72,6 +74,18 @@ li {
     font-size: medium;
     font-weight: bolder;
     font-style: italic;
+  }
+
+  img {
+    max-width: 100%;
+    height: 45px;
+    transition: height 0.4s;
+  }
+
+  .site-name {
+    font-size: x-large;
+    font-style: normal;
+    transition: height 0.4s;
   }
 
   .navbar {
@@ -95,30 +109,48 @@ li {
     align-items: center;
 }
 
-.nav-item {
+  .nav-item {
   margin-left: 0rem;
 }
   
-.nav-link {
+  .nav-link {
     font-size: medium;
     display: block;
     text-align: center;
     text-decoration: none;
     padding: 14px 16px;
     color: var(--navFontColor);
+    transition: all 0.4s;
 } 
   
-.nav-link:hover {
+  .nav-link:hover {
     color: var(--navAHoverColor);
     background-color: black;
     text-decoration: underline;
 }
 
-.nav-link:visited {
+  .nav-link:visited {
     color: var(--purple);
 } 
 
-.bar {
+ .sticky {
+  position: fixed;
+  top: 0;
+  height: 40px;
+  width: 100%;
+  border-bottom: 1px solid #7f6c001f;
+  background-color: #7f6c0005;
+}
+
+ .sticky img {
+  height: 36px;
+}
+  .sticky .nav-link {
+  height: 40px;
+  font-size: 15.5px;
+}
+
+  .bar {
     display: block;
     width: 28px;
     height: 4px;
@@ -185,7 +217,7 @@ main {
 .section-1 {
   text-align: center;
   color: var(--darkgreen);
-  margin-left: 40px;
+  margin-left: 6%;
   width: 90%;
   padding: 5px;
   overflow: hidden;
@@ -196,7 +228,7 @@ main {
   font-family: sans-serif;
   font-size: large;
   color: var(--sect2Color);
-  margin-left: 40px;
+  margin-left: 8%;
   width: 85%;
   padding: 1rem;
   padding-right: 0rem;
@@ -311,7 +343,7 @@ input:checked + .slider:before {
       <nav class="navbar nav-background">
         <div class="logo">
           Sample
-          <span style= "font-size: x-large; font-style: normal;"><b>Sample</b></span>
+          <span class= "site-name"><b>Sample</b></span>
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="https://dev.rebekahflora.com/samples/sample4.html" class="nav-link">Here</a></li>
@@ -406,6 +438,18 @@ function closeMenu() {
     hamburger.classList.remove("active");
     navMenu.classList.remove("active");
 }
+
+const navbar = document.querySelector('.navbar');
+let sticky = navbar.offsetTop;
+
+const navbarScroll = () => {
+    if (window.pageYOffset >= sticky) {
+        navbar.classList.add('sticky')
+    } else {navbar.classList.remove('sticky')
+    }
+};
+window.onscroll = navbarScroll;
+
     </script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </div>
