--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -136,14 +136,18 @@ li {
  .sticky {
   position: fixed;
   top: 0;
+  left: 0;
   height: 40px;
   width: 100%;
   border-bottom: 1px solid #7f6c001f;
   background-color: #7f6c0005;
+  overflow: hidden;
+  z-index: 1;
 }
 
  .sticky img {
   height: 36px;
+  margin-top: 5px;
 }
   .sticky .nav-link {
   height: 40px;
