--- a/about.html
+++ b/about.html
@@ -19,6 +19,9 @@
     <header>
       <nav class="navbar nav-background">
         <div class="site-logo">
+          <div class="clearfix">
+          <button class="btn" type="button">Dark</button>
+        </div>
           <img src="./images/Logo_69x69.png" alt="logo">
           <span class= "site-name"><b>Sample</b></span>
         </div>  
@@ -35,11 +38,7 @@
           <span class="bar"></span>
       </div>
       </nav>
-      <div class="clearfix">
-        <div> 
-          <button class="btn">Dark</button>
-        </div>
-      </div>
+     
       <h1>Exploration</h1>
       </header>
       
