--- a/samples/index.html
+++ b/samples/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample</title>
+    <title>Dev - Rebekah-Flora</title>
     <link rel="icon" href="../images/Apple_shreds.png" type="image/png">
     
     <link rel="stylesheet" href="../main.css">
+
+    <link rel="manifest" href="../manifest.json" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="../images/icons/Logo_72x72.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_96x96.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_128x128.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_144x144.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_152x152.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_192x192.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_384x384.png" />
+    <link rel="apple-touch-icon" href="../images/icons/Logo_512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#000000" />
+    <meta name="theme-color" content="#000000" />
 
 </head>
 <body>
@@ -19,8 +32,11 @@
     <header>
       <nav class="navbar nav-background">
         <div class="site-logo">
-          <img src="../images/Logo_69x69.png" alt="logo">
-          <span style= "font-size: x-large;"><b>Sample</b></span>
+          <div class="clearfix">
+            <button class="btn" type="button">Dark</button>
+          </div>
+          <img src="../images/icons/Logo_69x69.png" alt="logo">
+          <span style= "font-size: x-large;"><b>Dev</b></span>
         </div>  
         <ul class="nav-menu">
           <li class="nav-item"><a href="../index.html" class="nav-link">Home-page</a></li>
@@ -40,7 +56,7 @@
           <button class="btn">Dark</button>
         </div>
       </div>
-      <h1>Exploration</h1>
+      <h1 style="font-size: 250%;">Exploration</h1>
       </header>
       
       <main>
