--- a/samples/sample4.html
+++ b/samples/sample4.html
@@ -155,13 +155,15 @@ li {
 }
 
   .sticky .theme-switch {
-   height: 28px;
+   height: 26px;
+   width: 55px;
    top: 0;
    margin-top: 10px;
 }
 
   .sticky .slider:before {
-    height: 16px;
+    height: 14px;
+    width: 18px;
   }
 
   .bar {
@@ -239,7 +241,6 @@ main {
   text-align: center;
   color: var(--darkgreen);
   margin-left: 6%;
-  width: 90%;
   padding: 5px;
   overflow: hidden;
  }
@@ -249,8 +250,7 @@ main {
   font-family: sans-serif;
   font-size: large;
   color: var(--sect2Color);
-  margin-left: 8%;
-  width: 85%;
+  margin-left: 6%;
   padding: 1rem;
   padding-right: 0rem;
   left: 0px;
@@ -314,8 +314,8 @@ footer {
   width: 60px;
   top: 5px;
   left: 0;
-  margin-left: 5px;
-  margin-top: 15px;
+  margin: 15px 5px;
+  transition: 0.4s;
 }
 .theme-switch input {
   display: none;
@@ -393,7 +393,7 @@ input:checked + .slider:before {
       </nav>
 
      
-      <h1>Exploration</h1>
+      <h1 style="font-size: 300%;">Exploration</h1>
       </header>
       
       <main>
