--- a/samples/sample1.html
+++ b/samples/sample1.html
@@ -12,5 +12,9 @@ Body {
 }
 
 </style> 
+<body>
+  <h3><span style="color:#000000;"><span style="background-color:#360000; padding:2px"> <a href="https://dev.rebekahflora.com/samples/">Go Back</a></span></span></h3>
+  </body>
 </head>  
+
 </html>
