--- a/samples/sample2.html
+++ b/samples/sample2.html
@@ -60,6 +60,8 @@ section {
 <h3><span style="color:#000000;"><span style="background-color:#757575; padding:2px">&nbsp;or&nbsp;</span></span></h3>
 
 <h2><span style="background-color:#360000; display: inline-block; padding:2px">If you just need a landing page. </span>
+    <h3><span style="color:#000000;"><span style="background-color:#360000; padding:2px"> <a href="https://dev.rebekahflora.com/samples/">Go Back</a></span></span></h3>
+
 </section>
 </main>
 </div>
