--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -104,7 +104,10 @@ section {
 
 </main>
 
-<footer>Copyright &copy; Rebekah-Flora</footer>
+<footer>Copyright &copy; Rebekah-Flora &nbsp&nbsp
+<a href="https://dev.rebekahflora.com/samples/">Go Back</a>
+
+</footer>
 </div>
 </body>
 </html>
