--- a/samples/index.html
+++ b/samples/index.html
@@ -43,7 +43,7 @@
           <li class="nav-item"><a href="../about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#privacy-policy" class="nav-link">Privacy Policy</a></li>
           <li class="nav-item"><a href="../samples/index.html" class="nav-link">Samples</a></li>
-          <li class="nav-item"><a href="https://app.rebekah-flora.com" class="nav-link">Neutral</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Neutral</a></li>
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
@@ -51,12 +51,9 @@
           <span class="bar"></span>
       </div>
       </nav>
-      <div class="clearfix">
-        <div> 
-          <button class="btn">Dark</button>
-        </div>
-      </div>
+
       <h1 style="font-size: 250%;">Exploration</h1>
+
       </header>
       
       <main>
