--- a/samples/sample1.html
+++ b/samples/sample1.html
@@ -13,8 +13,8 @@ Body {
 
 </style> 
 <body>
-  <h3><span style="color:#000000;"><span style="background-color:#360000; padding:2px"> <a href="https://dev.rebekahflora.com/samples/">Go Back</a></span></span></h3>
-  </body>
+  <button type="button" style="height: 30px; width: 75px; font-size: 14px; font-weight: bold; text-align: center; color: #666; background-color: #360000; cursor: pointer;"><a href="../samples/index.html" style="color: #666; text-decoration: none;">Go Back</a></button> 
+</body>
 </head>  
 
 </html>
