--- a/samples/sample2.html
+++ b/samples/sample2.html
@@ -13,8 +13,8 @@ body {
     background-size: 100% 100%;
     text-align: center;
 }
-div.container {
-    width: 100%;
+ .container {
+    max-width: 100%;
     border: 1px solid transparent;
 }
 
@@ -39,6 +39,7 @@ section {
     overflow: hidden;
 }
 	</style>
+    
 </head>
 <body>
 
@@ -60,10 +61,15 @@ section {
 <h3><span style="color:#000000;"><span style="background-color:#757575; padding:2px">&nbsp;or&nbsp;</span></span></h3>
 
 <h2><span style="background-color:#360000; display: inline-block; padding:2px">If you just need a landing page. </span>
-    <h3><span style="color:#000000;"><span style="background-color:#360000; padding:2px"> <a href="https://dev.rebekahflora.com/samples/">Go Back</a></span></span></h3>
+   
 
 </section>
+<button type="button" style="height: 30px; width: 75px; font-size: 14px; font-weight: bold; text-align: center; color: #666; background-color: #360000; cursor: pointer;"><a href="../samples/index.html" style="color: #666; text-decoration: none;">Go Back</a></button> 
+
 </main>
+
 </div>
+
 </body>
+
 </html>
