--- a/samples/sample3.html
+++ b/samples/sample3.html
@@ -104,10 +104,7 @@ section {
 
 </main>
 
-<footer>Copyright &copy; Rebekah-Flora &nbsp&nbsp
-<a href="https://dev.rebekahflora.com/samples/">Go Back</a>
-
-</footer>
+<footer>Copyright &copy; Rebekah-Flora </footer>
 </div>
 </body>
 </html>
